--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ navigationLinks:
  - {permalink: "/", text: "Home"}
 # - {permalink: "/schedule/", text: "Schedule"}
  - {permalink: "/speakers/", text: "Speakers"}
+ - {permalink: "/exhibits/", text: "Exhibits"}
  - {permalink: "/#venue", text: "Venue"}
  - {permalink: "/#about", text: "About"}
 rightNavigationButtons:
@@ -166,3 +167,16 @@ workshopRows:
  - {title: "Google Glass", image: "hackathon-1.png", details: "We love wearable computing especially Google Glass for which we want to gather the break up community in order to boost innovation.<br><br>Coding an app on Google Glass needs its Rockstar Dev : the team needs a fast learner with solid skills on Android. He knows his way around Android SDK, already checked the Glass Developement Kit (GDK) quick start guide allowing him to jump start developing an app for Glass.The Designer has the hard task to build the visual identity from the ground up, he has strong UX knowledge and a deep understanding of the new rules set by the Glass. His design skills give him the credibility to decide the most effective UI and the most compelling Glass experience."}
  - {title: "Polymer", image: "hackathon-2.png", details: "Polymer is a library that introduces web components. Web components are small elements on a page that can be extended and incorporated in web applications. The result is an increase in productivity.<br><br>We used Polymer mainly to explore the concept of web components. The transition of Google to material design was also a factor.While the library was never touched by the team, it still was painless to wireframe the application. Later on we incorporated some Polymer components in the design. We didn’t use the full potential of Polymer because of the limited time."}
 
+
+# Hackathon
+hackathonTitle: "Exhibits"
+enableHackathon: true
+
+# Hackathon About Block
+aboutHackathonTitle: "Exhibits on display"
+hackathonRows:
+ - {title: "REC Marketplace", image: "rec-marketplace.png", details: "SP Group has launched one of the world’s first blockchain-powered Renewable Energy Certificate (REC) Marketplace. This platform enables companies and individuals to trade RECs in a simple, secure and cost-effective manner. It helps corporates achieve their sustainability goals more easily and conveniently. The platform also encourages a greater integration of renewable energy sources onto the electricity grid by empowering REC buyers and sellers of any size, whether you are a corporate or a “green conscious” homeowner, to participate and benefit from the marketplace."}
+ - {title: "SP Utilities App", image: "sp-utilities.png", details: " SP Utilities is the starting point for you to learn and manage your utilities consumption, compare offerings from different retailers and choose the right plan for your home. Residents in Singapore can use the App regardless whether they are purchasing electricity from SP Group or from another Retailer. For electric car drivers, SP Utilities provides the capability to locate high speed charging stations, scan to charge your electric car and keeping track of charging transactions."}
+ - {title: "Wireless Spike Gun Pin Puller", image: "spike-gun.jpg", details: "The Wireless Spike Gun Pin Puller is an enhancement of the rope system spike gun which enhances the safety of our personnel and increase the productivity at the workplace. The device can be implemented easily to a rope system spike gun and capable to activate it wirelessly. In line with safety, the device consists of unique safety features such as safety latch and an interlocking mechanism to prevent accidental activation of spike gun."}
+ - {title: "Energy Hero Card Game", image: "energy-hero.png", details: "Energy Hero is a fun-filled card game that introduces green technologies and energy-saving habits as you’re playing with friends and family! Every player start off with an empty home and they begin to fill their home with appliances from different categories: lighting, refrigeration, heating, cooling, washing and entertainment. Each appliance will have an associated number of ticks which represents its energy efficiency. To win, players add more ticks to the appliances by stacking them with green technologies or good energy behaviour cards – these are sometimes specific only to that particular appliance! The first player with more than 5 ticks from 3 different appliances of different colours wins!
+"}
