--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,158 +1,41 @@
 - 
-  date: "2019-01-18"
-  dateReadable: "January 18 - Conference, Day 1"
+  date: "2019-03-29"
+  dateReadable: "March 29 - Conference"
   tracks: 
-    - {title: "Sessions on 18th January", color: "#e28d35"}
+    - {title: "Sessions on 29th March", color: "#e28d35"}
   timeslots:
     - {
     	startTime: "8:00",
-    	endTime: "9:30",
-    	sessionIds: [101]
+    	endTime: "9:00",
+    	sessionIds: [001]
     }
     - {
-        startTime: "9:30",
+        startTime: "9:00",
+        endTime: "9:15",
+        sessionIds: [008]
+    }
+    - {
+    	startTime: "9:15",
+    	endTime: "9:35",
+    	sessionIds: [003]
+    }
+    - {
+        startTime: "9:35",
         endTime: "10:00",
-        sessionIds: [102]
-    }
-    - {
-    	startTime: "10:00",
-    	endTime: "10:35",
-    	sessionIds: [103]
-    }
-    - {
-        startTime: "10:35",
-        endTime: "11:10",
-        sessionIds: [104]
-    }
-    - {
-        startTime: "11:10",
-        endTime: "11:25",
-        sessionIds: [105]
-    }
-    - {
-        startTime: "11:25",
-        endTime: "12:00",
-        sessionIds: [106]
-    }
-    - {
-        startTime: "12:00",
-        endTime: "12:35",
-        sessionIds: [107]
-    }
-    - {
-        startTime: "12:35",
-        endTime: "14:00",
-        sessionIds: [108]
-    }
-    - {
-        startTime: "14:00",
-        endTime: "14:35",
-        sessionIds: [109]
-    }
-    - {
-        startTime: "14:35",
-        endTime: "15:10",
-        sessionIds: [110]
-    }
-    - {
-        startTime: "15:10",
-        endTime: "15:40",
-        sessionIds: [111]
-    }
-    - {
-        startTime: "15:40",
-        endTime: "16:15",
-        sessionIds: [112]
-    }
-    - {
-        startTime: "16:15",
-        endTime: "16:50",
-        sessionIds: [113]
-    }
-    - {
-        startTime: "16:50",
-        endTime: "17:00",
-        sessionIds: [114]
-    }
-
-- 
-  date: "2019-01-19"
-  dateReadable: "January 19 - Conference, Day 2"
-  tracks: 
-    - {title: "Sessions on 19th January", color: "#e28d35"}
-  timeslots:
-    - {
-        startTime: "8:30",
-        endTime: "9:50",
-        sessionIds: [201]
-    }
-    - {
-        startTime: "9:50",
-        endTime: "10:00",
-        sessionIds: [202]
+        sessionIds: [004]
     }
     - {
         startTime: "10:00",
-        endTime: "10:35",
-        sessionIds: [203]
+        endTime: "11:00",
+        sessionIds: [009]
     }
     - {
-        startTime: "10:35",
-        endTime: "11:10",
-        sessionIds: [204]
+        startTime: "11:00",
+        endTime: "11:20",
+        sessionIds: [002]
     }
     - {
-        startTime: "11:10",
-        endTime: "11:25",
-        sessionIds: [205]
-    }
-    - {
-        startTime: "11:25",
-        endTime: "12:00",
-        sessionIds: [206]
-    }
-    - {
-        startTime: "12:00",
-        endTime: "12:35",
-        sessionIds: [207]
-    }
-    - {
-        startTime: "12:35",
-        endTime: "14:00",
-        sessionIds: [208]
-    }
-    - {
-        startTime: "14:00",
-        endTime: "14:35",
-        sessionIds: [209]
-    }
-    - {
-        startTime: "14:35",
-        endTime: "15:10",
-        sessionIds: [210]
-    }
-    - {
-        startTime: "15:10",
-        endTime: "15:40",
-        sessionIds: [211]
-    }
-    - {
-        startTime: "15:40",
-        endTime: "16:25",
-        sessionIds: [212]
-    }
-    - {
-        startTime: "16:25",
-        endTime: "17:00",
-        sessionIds: [213]
-    }
-    - {
-        startTime: "17:00",
-        endTime: "17:10",
-        sessionIds: [214]
-    }
-    - {
-        startTime: "17:30",
-        endTime: "21:30",
-        sessionIds: [215]
+        startTime: "11:20",
+        endTime: "11:30",
+        sessionIds: [010]
     }
