--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -5,37 +5,42 @@
     - {title: "Sessions on 29th March", color: "#e28d35"}
   timeslots:
     - {
-    	startTime: "8:00",
-    	endTime: "9:00",
+    	startTime: "8:30",
+    	endTime: "9:15",
     	sessionIds: [001]
     }
     - {
-        startTime: "9:00",
-        endTime: "9:15",
+        startTime: "9:15",
+        endTime: "9:30",
         sessionIds: [008]
     }
     - {
-    	startTime: "9:15",
-    	endTime: "9:35",
+    	startTime: "9:30",
+    	endTime: "9:50",
     	sessionIds: [003]
     }
     - {
-        startTime: "9:35",
-        endTime: "10:00",
+        startTime: "9:50",
+        endTime: "10:10",
         sessionIds: [004]
     }
     - {
-        startTime: "10:00",
-        endTime: "11:00",
+        startTime: "10:10",
+        endTime: "11:10",
         sessionIds: [009]
     }
     - {
-        startTime: "11:00",
-        endTime: "11:20",
+        startTime: "11:10",
+        endTime: "11:30",
         sessionIds: [002]
     }
     - {
-        startTime: "11:20",
-        endTime: "11:30",
+        startTime: "11:30",
+        endTime: "11:40",
         sessionIds: [010]
+    }
+    - {
+        startTime: "11:40",
+        endTime: "12:30",
+        sessionIds: [011]
     }
